# StableDfusion

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  context.md  install-windows.bat  install.sh  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  server.py  start-windows.bat  start.sh
backend/: __init__.py  app.py  config.py  context.py  http.py  routing.py  state.py
backend/routes/: __init__.py  file_picker.py  generate.py  git_update.py  hf_download.py  images.py  install.py  lifecycle.py  models.py  presets.py  server_mode.py  status.py  tunnel.py
backend/services/: __init__.py  file_picker_service.py  generate_service.py  git_update_service.py  hf_download_service.py  lifecycle_service.py  model_storage_service.py  process_manager.py  sdcpp_manager.py  server_mode_service.py  tunnel_service.py
docs/: audit.md  bugtracker.md  cli_flags_report.txt  context.md  directory.md  generate-ui-module-breakdown-plan.md  inpainting.md  todo.md
tests/: _download_sd15.py
tests/backend/: __init__.py  test_file_picker_routes.py  test_generate_routes.py  test_generate_service.py  test_hf_download_service.py  test_http.py  test_images_route.py  test_models_route.py  test_presets_routes.py  test_process_manager.py  test_sdcpp_manager.py  test_server_mode_service.py
tests/frontend/: flag_core_unit.cjs  flag_sync_smoke.cjs  js_syntax_check.cjs
ui/: index.html
ui/css/: style.css  tokens.css
ui/js/: api-tab.js  app-data.js  app.js  config-flags-ui.js  flag-core.js  flag-validation.js  gallery-rendering.js  generate-ui.js  (+5 more)
(+24 files in other folders)
